--- a/android/key.properties
+++ b/android/key.properties
@@ -1,4 +1,4 @@
-storePassword=UniqueItSolutuon@196@AppleBathFitting
-keyPassword=UniqueItSolutuon@196@AppleBathFitting
-keyAlias=key0
-storeFile=key.jks
+storePassword=cqpple@123
+keyPassword=cqpple@123
+keyAlias=cqpple
+storeFile=C:/Users/vivek/cqpple.jks
