--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -49,7 +49,7 @@ android {
     }
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.uniqueitsolution.applebathfitting"
+        applicationId "com.cqpplefitting"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-build-configuration.
         minSdkVersion 19
@@ -72,6 +72,11 @@ android {
             signingConfig signingConfigs.release
         }
     }
+    /*buildTypes {
+        release {
+            signingConfig signingConfigs.debug
+        }
+    }*/
 }
 
 flutter {
