--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -28,14 +28,19 @@
 	<false/>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string>Please allow us to use photo library to add services</string>
 	<key>NSCameraUsageDescription</key>
 	<string>Please allow us to use camera to add services</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>Please allow us to use Microphone access to add services</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Please allow us to use photo library to add services</string>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>fetch</string>
+		<string>remote-notification</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen.storyboard</string>
 	<key>UIMainStoryboardFile</key>
@@ -53,5 +58,7 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+    <key>FirebaseAppDelegateProxyEnabled</key>
+    <false/>
 </dict>
 </plist>
